...
                onTabSelect = { route -> navigationActions.navigateTo(route) },
                tabList = LIST_TOP_LEVEL_DESTINATION,
                selectedItem = navigationActions.currentRoute())
          }
        }
      },
      modifier = Modifier.testTag("searchScaffold"),
      content = content)
}

