...
            "My Library",
            "libraryTitle",
            listOf {
              CornerIcons(
                  onClick = {},
                  icon = Icons.Outlined.Search,
                  contentDescription = "Search",
                  modifier = Modifier.testTag("searchButton"))
              CornerIcons(
                  onClick = { navigationActions.navigateTo(Screen.CREATE_NEW_PLAYLIST) },
                  icon = Icons.Outlined.Add,
                  contentDescription = "Add playlist",
                  modifier = Modifier.testTag("addPlaylistButton"))
...
